implement the category selection page

--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="handler"
+            type="com.doublesp.coherence.interfaces.presentation.ExploreFragmentActionHandlerInterface" />
+    </data>
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -12,11 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" >
-            <ImageView
+            <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="0dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/travel"/>
+                android:src="@drawable/travel"
+                android:onClick="@{() -> handler.onCategorySelected(@id/idea_category_travel)}"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -32,11 +40,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" >
-            <ImageView
+            <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="0dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/groceries" />
+                android:src="@drawable/groceries"
+                android:onClick="@{() -> handler.onCategorySelected(@id/idea_category_groceries)}"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -52,11 +63,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1" >
-            <ImageView
+            <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="0dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/movies" />
+                android:src="@drawable/movies"
+                android:onClick="@{() -> handler.onCategorySelected(@id/idea_category_movies)}"
+                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
