--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="item_click_support" type="id" />
-    <item name="idea_category_movie" type="id" />
+    <item name="idea_category_movies" type="id" />
+    <item name="idea_category_travel" type="id" />
+    <item name="idea_category_groceries" type="id" />
 </resources>
