initial implemention of list composition page

--- a/app/src/main/res/layout/fragment_list_composition.xml
+++ b/app/src/main/res/layout/fragment_list_composition.xml
@@ -5,7 +5,11 @@
         android:layout_height="match_parent"
         tools:context="com.doublesp.coherence.fragments.ListCompositionFragment">
 
-
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvIdeas"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent" />
 
     </FrameLayout>
 </layout>
