--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,7 @@
     <item name="idea_category_movies" type="id" />
     <item name="idea_category_travel" type="id" />
     <item name="idea_category_groceries" type="id" />
+    <item name="idea_type_user_generated" type="id" />
+    <item name="idea_type_blank" type="id" />
+    <item name="idea_type_suggestion" type="id" />
 </resources>
