--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -8,9 +8,7 @@
     <item name="idea_type_blank" type="id" />
     <item name="idea_type_suggestion" type="id" />
     <item name="idea_state_idle" type="id" />
-    <item name="idea_state_related_pending" type="id" />
-    <item name="idea_state_related_loaded" type="id" />
-    <item name="idea_state_creation_pending" type="id" />
-    <item name="idea_state_creation_settled" type="id" />
+    <item name="idea_state_refreshing" type="id" />
+    <item name="idea_state_loaded" type="id" />
 
 </resources>
