--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="colorTextWithOverlay">#F8F8F8</color>
-    <color name="colorButton">#F8F8F8</color>
+    <color name="colorPrimary">#3b5998</color>
+    <color name="colorPrimaryDark">#8b9dc3</color>
+    <color name="colorAccent">#dfe3ee</color>
+    <color name="colorLightPrimary">#F8F8F8</color>
+    <color name="colorButton">#FFFFFF</color>
     <color name="colorLightOverlay">#22000000</color>
     <color name="colorOverlay">#80000000</color>
 </resources>
