--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Dialog.FullScreen" parent="Theme.AppCompat.Dialog">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:windowBackground">@color/colorLightPrimary</item>
+    </style>
+
 </resources>
