#7 List composition page (#24)
* include wireframe

* initial implementation

* implement category selection page

* implement the category selection page

* remove unnecessary dependency

* remove unnecessary dependencies

* include multidex support

* Added support for Parse.
Formatted code to follow Android guidelines.

* fix syntax

* initial implemention of list composition page

* implementing list composition page

* fix the issue where adding idea is not reflected on UI immediately

* implement suggestions

* randomize suggestions to simulate suggestions refresh

* fix stuff

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,4 +4,11 @@
     <item name="idea_category_movies" type="id" />
     <item name="idea_category_travel" type="id" />
     <item name="idea_category_groceries" type="id" />
+    <item name="idea_type_user_generated" type="id" />
+    <item name="idea_type_blank" type="id" />
+    <item name="idea_type_suggestion" type="id" />
+    <item name="idea_state_idle" type="id" />
+    <item name="idea_state_refreshing" type="id" />
+    <item name="idea_state_loaded" type="id" />
+
 </resources>
