--- a/app/src/main/res/layout/fragment_idea_preview.xml
+++ b/app/src/main/res/layout/fragment_idea_preview.xml
@@ -21,39 +21,47 @@
                 app:imageUrl='@{viewModel.meta.imageUrl}'
                 />
 
-        <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-        <!--android:orientation="vertical"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_gravity="bottom"-->
-        <!--android:gravity="top"-->
-        <!--android:background="@color/colorOverlay">-->
-        <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-        <!--tools:text="The Girl on the Train"-->
-        <!--android:textColor="@color/colorTextWithOverlay"-->
-        <!--android:id="@+id/tvTitle"-->
-        <!--android:paddingTop="10dp"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp"/>-->
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/rvIdeaSelector"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="bottom"
+                android:gravity="top"
+                android:background="@color/colorOverlay">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:layout_margin="10dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    tools:text="The Girl on the Train"
+                    android:text='@{viewModel.meta.title}'
+                    android:textColor="@color/colorButton"
+                    android:id="@+id/tvTitle" />
 
-        <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:ellipsize="end"-->
-        <!--android:maxLines="3"-->
-        <!--tools:text="Rachel Watson, an alcoholic who divorced her husband Tom after she caught him cheating on her, takes the train to work daily. She fantasizes about the relationship of her neighbours, Scott and Megan Hipwell, during her commute. That all changes when she witnesses something from the train window and Megan is missing, presumed dead."-->
-        <!--android:textColor="@color/colorTextWithOverlay"-->
-        <!--android:id="@+id/tvOverview"-->
-        <!--android:paddingTop="10dp"-->
-        <!--android:paddingLeft="10dp"-->
-        <!--android:paddingRight="10dp" />-->
-        <!--</LinearLayout>-->
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    tools:text="Rachel Watson, an alcoholic who divorced her husband Tom after she caught him cheating on her, takes the train to work daily. She fantasizes about the relationship of her neighbours, Scott and Megan Hipwell, during her commute. That all changes when she witnesses something from the train window and Megan is missing, presumed dead."
+                    android:text='@{viewModel.meta.description}'
+                    android:textColor="@color/colorButton"
+                    android:id="@+id/tvOverview" />
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvIdeaSelector"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fragment_idea_preview_idea_selector_height"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@color/colorOverlay" />
 
     </RelativeLayout>
 </layout>
