--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/activity_explore"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.doublesp.coherence.activities.ExploreActivity">
+        xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/activity_explore"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:context="com.doublesp.coherence.activities.ExploreActivity">
 
-        <FrameLayout
-            android:id="@+id/flExploreContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+        <android.support.v4.view.ViewPager
+                android:id="@+id/viewpager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/tabs"
+                android:background="@android:color/transparent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    </LinearLayout>
+        <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                app:tabMode="fixed"
+                />
+
+    </RelativeLayout>
 </layout>
