Integrate with Recipe api (#35)
* initial implementation on lists of plans

* initial implementation of recipe api integration

* update README

* solbe conflict

* switch to mock data

* add mock plan

* update share activity

* update message

* fix mock data support

* fix basic flow

* fill ingredients to the list instead of the recipe itself

* update comment

* move string to resource file

--- a/app/src/main/res/layout/item_idea_blank.xml
+++ b/app/src/main/res/layout/item_idea_blank.xml
@@ -16,6 +16,7 @@
                   android:gravity="center"
                   android:maxLines="1"
                   android:text='@{viewModel.content}'
+                  android:hint="@string/idea_hint_recipe"
                 />
     </LinearLayout>
 </layout>
