--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -2,11 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/activity_explore"
-                    android:orientation="vertical"
+                    android:id="@+id/activity_home"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:context="com.doublesp.coherence.activities.ExploreActivity">
+                    tools:context="com.doublesp.coherence.activities.HomeActivity">
 
         <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager"
