--- a/app/src/main/res/layout/item_idea_suggestions.xml
+++ b/app/src/main/res/layout/item_idea_suggestions.xml
@@ -7,16 +7,28 @@
         <variable name="viewModel"
                   type="com.doublesp.coherence.viewmodels.Idea" />
     </data>
-    <LinearLayout android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView android:id="@+id/tvIdeaSuggestion"
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/activity_list_composition_idea_height"
                   android:gravity="center"
                   android:maxLines="1"
                   android:text='@{viewModel.content}'
+                  android:textColor="@color/colorSecondary"
                   android:onClick="@{() -> handler.onSuggestionClick(pos)}"
                 />
-    </LinearLayout>
+        <ImageButton android:id="@+id/ibIdeaPreview"
+                     android:layout_width="@dimen/activity_list_composition_idea_preview_icon_width"
+                     android:layout_height="@dimen/activity_list_composition_idea_preview_icon_height"
+                     android:layout_marginEnd="@dimen/activity_list_composition_idea_preview_icon_margin_right"
+                     android:layout_marginRight="@dimen/activity_list_composition_idea_preview_icon_margin_right"
+                     android:src="@drawable/ic_visibility"
+                     android:tint="@color/colorPrimaryDark"
+                     android:background="@android:color/transparent"
+                     android:layout_gravity="center_vertical|right|end"
+                     android:onClick="@{() -> handler.onPreviewButtonClick(pos)}"
+                />
+    </FrameLayout>
 </layout>
