--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,11 +15,12 @@
                 android:background="@android:color/transparent"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+        <!-- TODO: decide whether we need multiple tabs -->
         <android.support.design.widget.TabLayout
                 android:id="@+id/tabs"
                 android:background="@color/colorPrimary"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_alignParentBottom="true"
                 app:tabMode="fixed"
                 />
