--- a/app/src/main/res/layout/fragment_list_composition.xml
+++ b/app/src/main/res/layout/fragment_list_composition.xml
@@ -9,22 +9,30 @@
                  android:layout_height="match_parent"
                  tools:context="com.doublesp.coherence.fragments.ListCompositionFragment">
 
+        <ImageView
+                android:id="@+id/ivIdeaCompositionBackground"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                tools:src="@drawable/background_0"
+                android:alpha="0.2"
+                />
+
         <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvIdeas"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent" />
 
-
         <android.support.design.widget.FloatingActionButton
-                android:src="@drawable/ic_visibility"
+                android:src="@drawable/ic_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|right|end"
+                android:layout_gravity="bottom|right|end"
                 android:layout_margin="16dp"
                 android:onClick="@{() -> handler.onFloatingAcitonButtonClick()}"
-                android:backgroundTint="@color/colorAccent"
-                android:tint="@color/colorPrimaryDark"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:tint="@color/colorButton"
                 app:fabSize="normal"
                 app:layout_anchor="@id/rvIdeas"
                 app:layout_anchorGravity="bottom|right|end" />
