--- a/app/src/main/res/layout/fragment_multiple_idea_preview.xml
+++ b/app/src/main/res/layout/fragment_multiple_idea_preview.xml
@@ -3,19 +3,23 @@
     <data>
         <variable name="viewModel"
                   type="com.doublesp.coherence.viewmodels.Idea" />
+        <variable name="handler"
+                  type="com.doublesp.coherence.interfaces.presentation.IdeaPreviewActionHandlerInterface" />
     </data>
-    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 tools:context="com.doublesp.coherence.fragments.IdeaPreviewFragment">
+    <RelativeLayout
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            tools:context="com.doublesp.coherence.fragments.MultipleIdeaPreviewFragment">
 
         <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/ivIdeaBackgroundImage"
                 android:scaleType="centerCrop"
+                android:layout_centerInParent="true"
                 app:imageUrl='@{viewModel.meta.imageUrl}'
-                tools:src="@drawable/background_0"
                 />
 
         <LinearLayout
@@ -23,6 +27,9 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_above="@+id/rvIdeaSelector"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_gravity="bottom"
                 android:gravity="top"
                 android:background="@color/colorOverlay">
@@ -32,7 +39,7 @@
                     android:gravity="center_horizontal"
                     android:layout_margin="10dp"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    tools:text="Grilled Deviled Chickens"
+                    tools:text="The Girl on the Train"
                     android:text='@{viewModel.meta.title}'
                     android:textColor="@color/colorButton"
                     android:id="@+id/tvTitle" />
@@ -42,19 +49,23 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:ellipsize="end"
-                    tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
-3 lemons, plus wedges for garnish
-4 cloves garlic, peeled and smashed
-1 tablespoon crushed red-pepper flakes, or to taste
-1 tablespoon finely chopped fresh thyme
-1 tablespoon finely chopped fresh rosemary
-1/2 cup olive oil
-Salt, to taste"
+                    android:maxLines="3"
+                    tools:text="Rachel Watson, an alcoholic who divorced her husband Tom after she caught him cheating on her, takes the train to work daily. She fantasizes about the relationship of her neighbours, Scott and Megan Hipwell, during her commute. That all changes when she witnesses something from the train window and Megan is missing, presumed dead."
                     android:text='@{viewModel.meta.description}'
                     android:textColor="@color/colorButton"
                     android:id="@+id/tvOverview" />
 
         </LinearLayout>
 
-    </FrameLayout>
+        <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvIdeaSelector"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fragment_idea_preview_idea_selector_height"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@color/colorOverlay" />
+
+    </RelativeLayout>
+
 </layout>
