--- a/app/src/main/res/layout/fragment_idea_preview.xml
+++ b/app/src/main/res/layout/fragment_idea_preview.xml
@@ -1,58 +1,62 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <variable name="viewModel"
-                  type="com.doublesp.coherence.viewmodels.Idea" />
+
+        <variable
+            name="viewModel"
+            type="com.doublesp.coherence.viewmodels.Idea" />
     </data>
+
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 tools:context="com.doublesp.coherence.fragments.IdeaPreviewFragment">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.doublesp.coherence.fragments.IdeaPreviewFragment">
 
         <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/ivIdeaBackgroundImage"
-                android:scaleType="centerCrop"
-                app:imageUrl='@{viewModel.meta.imageUrl}'
-                tools:src="@drawable/background_0"
-                />
+            android:id="@+id/ivIdeaBackgroundImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:imageUrl='@{viewModel.meta.imageUrl}'
+            tools:src="@drawable/background_0" />
 
         <LinearLayout
-                android:id="@+id/llIdeaDescriptionBox"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:gravity="top"
-                android:background="@color/colorOverlay">
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:layout_margin="10dp"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    tools:text="Grilled Deviled Chickens"
-                    android:text='@{viewModel.meta.title}'
-                    android:textColor="@color/colorButton"
-                    android:id="@+id/tvTitle" />
+            android:id="@+id/llIdeaDescriptionBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/colorOverlay"
+            android:gravity="top"
+            android:orientation="vertical">
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:ellipsize="end"
-                    tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
+                android:id="@+id/tvTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:gravity="center_horizontal"
+                android:text='@{viewModel.meta.title}'
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/colorButton"
+                tools:text="Grilled Deviled Chickens" />
+
+            <TextView
+                android:id="@+id/tvOverview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:ellipsize="end"
+                android:text='@{viewModel.meta.description}'
+                android:textColor="@color/colorButton"
+                tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
 3 lemons, plus wedges for garnish
 4 cloves garlic, peeled and smashed
 1 tablespoon crushed red-pepper flakes, or to taste
 1 tablespoon finely chopped fresh thyme
 1 tablespoon finely chopped fresh rosemary
 1/2 cup olive oil
-Salt, to taste"
-                    android:text='@{viewModel.meta.description}'
-                    android:textColor="@color/colorButton"
-                    android:id="@+id/tvOverview" />
+Salt, to taste" />
 
         </LinearLayout>
 
