--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
-        <variable name="pos" type="int"/>
-        <variable name="viewModel"
-                  type="com.doublesp.coherence.viewmodels.Idea" />
+
+        <variable
+            name="pos"
+            type="int" />
+
+        <variable
+            name="viewModel"
+            type="com.doublesp.coherence.viewmodels.Idea" />
     </data>
-    <LinearLayout android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-        <TextView android:id="@+id/tvIdea"
-                  android:layout_width="match_parent"
-                  android:layout_height="@dimen/activity_list_composition_idea_height"
-                  android:gravity="center"
-                  android:maxLines="1"
-                  android:text='@{viewModel.content}'
-                  android:textColor="@color/colorPrimary"
-                />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvIdea"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/activity_list_composition_idea_height"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text='@{viewModel.content}'
+            android:textColor="@color/colorPrimary" />
     </LinearLayout>
 </layout>
