--- a/app/src/main/res/layout/item_plan.xml
+++ b/app/src/main/res/layout/item_plan.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
-        <variable name="pos" type="int"/>
-        <variable name="viewModel"
-                  type="com.doublesp.coherence.viewmodels.Plan" />
+
+        <variable
+            name="pos"
+            type="int" />
+
+        <variable
+            name="viewModel"
+            type="com.doublesp.coherence.viewmodels.Plan" />
     </data>
-    <LinearLayout android:orientation="vertical"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content">
-        <TextView android:id="@+id/tvPlan"
-                  android:layout_width="match_parent"
-                  android:layout_height="@dimen/activity_list_composition_idea_height"
-                  android:gravity="center"
-                  android:maxLines="1"
-                  android:text='@{viewModel.title}'
-                />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvPlan"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/activity_list_composition_idea_height"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text='@{viewModel.title}' />
     </LinearLayout>
 </layout>
