--- a/app/src/main/res/layout/activity_external_link.xml
+++ b/app/src/main/res/layout/activity_external_link.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.doublesp.coherence.ExternalLinkActivity">
+    tools:context="com.doublesp.coherence.activities.ExternalLinkActivity">
 
     <TextView
         android:text="TextView"
