shopping list review page (#40)
* implement shopping list review page

* update gif

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorLightPrimary">#F8F8F8</color>
     <color name="colorButton">#FFFFFF</color>
     <color name="colorOverlay">#80000000</color>
+    <color name="colorWhiteOverlay">#80FFFFFF</color>
 </resources>
