--- a/app/src/main/res/layout/item_idea_blank.xml
+++ b/app/src/main/res/layout/item_idea_blank.xml
@@ -28,6 +28,7 @@
             android:gravity="center"
             android:hint="@string/idea_hint_recipe"
             android:maxLines="1"
-            android:text='@{viewModel.content}'/>
+            android:text='@{viewModel.content}'
+            android:textColor="@color/colorPrimary"/>
     </LinearLayout>
 </layout>
