--- a/app/src/main/res/layout/activity_external_link.xml
+++ b/app/src/main/res/layout/activity_external_link.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_external_link"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.doublesp.coherence.activities.ExternalLinkActivity">
-</FrameLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_external_link"
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    tools:context="com.doublesp.coherence.activities.ExternalLinkActivity"></FrameLayout>
