--- a/app/src/main/res/layout/item_idea_selector_idea.xml
+++ b/app/src/main/res/layout/item_idea_selector_idea.xml
@@ -3,21 +3,16 @@
 
     <data>
 
-        <variable
-            name="viewModel"
-            type="com.doublesp.coherence.viewmodels.Idea"/>
+        <variable name="viewModel" type="com.doublesp.coherence.viewmodels.Idea" />
     </data>
 
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content">
+        android:layout_width="wrap_content" android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/ivIdeaSelectorImage"
+        <ImageView android:id="@+id/ivIdeaSelectorImage"
             android:layout_width="@dimen/fragment_idea_preview_idea_selector_width"
             android:layout_height="@dimen/fragment_idea_preview_idea_selector_height"
-            android:scaleType="centerCrop"
-            app:roundedImageUrl='@{viewModel.meta.imageUrl}'/>
+            android:scaleType="centerCrop" app:roundedImageUrl='@{viewModel.meta.imageUrl}' />
 
     </FrameLayout>
 </layout>
