--- a/app/src/main/res/layout/item_plan.xml
+++ b/app/src/main/res/layout/item_plan.xml
@@ -3,26 +3,16 @@
 
     <data>
 
-        <variable
-            name="pos"
-            type="int"/>
+        <variable name="pos" type="int" />
 
-        <variable
-            name="viewModel"
-            type="com.doublesp.coherence.viewmodels.Plan"/>
+        <variable name="viewModel" type="com.doublesp.coherence.viewmodels.Plan" />
     </data>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvPlan"
-            android:layout_width="match_parent"
+        <TextView android:id="@+id/tvPlan" android:layout_width="match_parent"
             android:layout_height="@dimen/activity_list_composition_idea_height"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text='@{viewModel.title}'/>
+            android:gravity="center" android:maxLines="1" android:text='@{viewModel.title}' />
     </LinearLayout>
 </layout>
