initial implementation on recipe search page

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -9,6 +9,8 @@
     <item name="idea_type_suggestion" type="id" />
     <item name="idea_state_idle" type="id" />
     <item name="idea_state_refreshing" type="id" />
-    <item name="idea_state_idea_loaded" type="id" />
-    <item name="idea_state_suggestion_loaded" type="id" />
+    <item name="idea_state_loaded" type="id" />
+    <item name="suggestion_state_idle" type="id" />
+    <item name="suggestion_state_refreshing" type="id" />
+    <item name="suggestion_state_loaded" type="id" />
 </resources>
