--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,8 @@
             android:layout_above="@+id/tabs" android:background="@android:color/transparent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <!-- TODO: decide whether we need multiple tabs -->
         <android.support.design.widget.TabLayout android:id="@+id/tabs"
-            android:layout_width="match_parent" android:layout_height="0dp"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
             android:layout_alignParentBottom="true" android:background="@color/colorPrimary"
             app:tabMode="fixed" />
 
