--- a/app/src/main/res/layout/fragment_idea_search_result.xml
+++ b/app/src/main/res/layout/fragment_idea_search_result.xml
@@ -11,10 +11,10 @@
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context="com.doublesp.coherence.fragments.ListCompositionFragment">
+                 tools:context="com.doublesp.coherence.fragments.IdeaSearchResultFragment">
 
         <ImageView
-                android:id="@+id/ivIdeaCompositionBackground"
+                android:id="@+id/ivIdeaSearchBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:alpha="0.1"
@@ -22,18 +22,18 @@
                 tools:src="@drawable/background_0"/>
 
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvIdeas"
+                android:id="@+id/rvIdeaSearchResults"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"/>
 
         <EditText
-                android:id="@+id/etIdea"
+                android:id="@+id/etIdeaSearchBox"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/activity_list_composition_idea_height"
                 android:layout_gravity="bottom"
                 android:gravity="center"
-                android:hint="@string/idea_hint_create"
+                android:hint="@string/idea_hint_search"
                 android:maxLines="1"
                 android:textColor="@color/colorPrimary"/>
 
@@ -46,7 +46,7 @@
                 android:src="@drawable/ic_share"
                 android:tint="@color/colorButton"
                 app:fabSize="normal"
-                app:layout_anchor="@id/rvIdeas"
+                app:layout_anchor="@id/rvIdeaSearchResults"
                 app:layout_anchorGravity="bottom|right|end"/>
 
     </FrameLayout>
