--- a/app/src/main/res/layout/fragment_saved_goals.xml
+++ b/app/src/main/res/layout/fragment_saved_goals.xml
@@ -11,31 +11,21 @@
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context="com.doublesp.coherence.fragments.ListCompositionFragment">
+                 tools:context="com.doublesp.coherence.fragments.SavedGoalsFragment">
 
         <ImageView
-                android:id="@+id/ivIdeaCompositionBackground"
+                android:id="@+id/ivSecitonedIdeaCompositionBackground"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:alpha="0.1"
+                android:alpha="0.2"
                 android:scaleType="centerCrop"
                 tools:src="@drawable/background_0"/>
 
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvIdeas"
+                android:id="@+id/rvSavedGoals"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"/>
-
-        <EditText
-                android:id="@+id/etIdea"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/activity_list_composition_idea_height"
-                android:layout_gravity="bottom"
-                android:gravity="center"
-                android:hint="@string/idea_hint_create"
-                android:maxLines="1"
-                android:textColor="@color/colorPrimary"/>
 
         <android.support.design.widget.FloatingActionButton
                 android:layout_width="wrap_content"
@@ -46,8 +36,9 @@
                 android:src="@drawable/ic_share"
                 android:tint="@color/colorButton"
                 app:fabSize="normal"
-                app:layout_anchor="@id/rvIdeas"
+                app:layout_anchor="@id/rvSavedGoals"
                 app:layout_anchorGravity="bottom|right|end"/>
 
     </FrameLayout>
+
 </layout>
