--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#4E342E</color>
     <color name="colorPrimaryDark">#BDBDBD</color>
-    <color name="colorAccent">#8D6E63</color>
+    <color name="colorAccent">#FF1744</color>
     <color name="colorSecondary">#BCAAA4</color>
     <color name="colorLightPrimary">#F8F8F8</color>
     <color name="colorButton">#FFFFFF</color>
