--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_list_composition_idea_height">44dp</dimen>
+    <dimen name="activity_list_composition_idea_icon_width">44dp</dimen>
+    <dimen name="activity_list_composition_idea_icon_height">44dp</dimen>
+    <dimen name="activity_list_composition_idea_icon_margin_right">10dp</dimen>
     <dimen name="activity_list_composition_idea_preview_icon_width">44dp</dimen>
     <dimen name="activity_list_composition_idea_preview_icon_height">44dp</dimen>
     <dimen name="activity_list_composition_idea_preview_icon_margin_right">10dp</dimen>
