--- a/app/src/main/res/layout/fragment_saved_plans.xml
+++ b/app/src/main/res/layout/fragment_saved_plans.xml
@@ -11,7 +11,7 @@
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context="com.doublesp.coherence.fragments.SavedGoalsFragment">
+                 tools:context="com.doublesp.coherence.fragments.SavedPlansFragment">
 
         <ImageView
                 android:id="@+id/ivSecitonedIdeaCompositionBackground"
@@ -22,7 +22,7 @@
                 tools:src="@drawable/background_0"/>
 
         <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvSavedGoals"
+                android:id="@+id/rvSavedPlans"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/transparent"/>
@@ -32,11 +32,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right|end"
                 android:layout_margin="16dp"
-                android:onClick="@{() -> handler.onFloatingAcitonButtonClick()}"
-                android:src="@drawable/ic_share"
+                android:onClick="onIdeaSearchClick"
+                android:src="@drawable/ic_search"
                 android:tint="@color/colorButton"
                 app:fabSize="normal"
-                app:layout_anchor="@id/rvSavedGoals"
+                app:layout_anchor="@id/rvSavedPlans"
                 app:layout_anchorGravity="bottom|right|end"/>
 
     </FrameLayout>
