--- a/app/src/main/res/layout/fragment_goal_search.xml
+++ b/app/src/main/res/layout/fragment_goal_search.xml
@@ -4,7 +4,7 @@
     <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
-                 tools:context="com.doublesp.coherence.fragments.IdeaSearchResultFragment">
+                 tools:context="com.doublesp.coherence.fragments.GoalSearchFragment">
 
         <ImageView
                 android:id="@+id/ivIdeaSearchBackground"
