add save button

--- a/app/src/main/res/layout/fragment_saved_ideas.xml
+++ b/app/src/main/res/layout/fragment_saved_ideas.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout xmlns:fab="http://schemas.android.com/apk/res-auto"
+    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
@@ -13,29 +13,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-        <com.getbase.floatingactionbutton.FloatingActionsMenu
-                android:id="@+id/multiple_actions"
+        <android.support.design.widget.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|right|end"
                 android:layout_margin="16dp"
-                fab:fabSize="normal"
-                fab:layout_anchor="@id/rvIdeas"
-                fab:layout_anchorGravity="bottom|right|end"
-                fab:fab_addButtonColorNormal="@color/white"
-                fab:fab_addButtonColorPressed="@color/white_pressed"
-                fab:fab_addButtonPlusIconColor="@color/half_black"
-                fab:fab_labelStyle="@style/menu_labels_style">
+                android:src="@drawable/ic_create"
+                android:tint="@color/colorButton"
+                android:onClick="onIdeaCompositionClick"
+                app:fabSize="normal"
+                app:fab_title="@string/custom_list"
+                app:layout_anchor="@id/rvSavedIdeas"
+                app:layout_anchorGravity="bottom|right|end"/>
 
-            <com.getbase.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/custom_list"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    fab:fab_colorNormal="@color/white"
-                    fab:fab_colorPressed="@color/white_pressed"
-                    fab:fab_title="@string/custom_list"
-                    android:onClick="onIdeaCompositionClick"/>
-
-        </com.getbase.floatingactionbutton.FloatingActionsMenu>
     </FrameLayout>
 </layout>
